MiniJavaParser.py
# Generated from MiniJava.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'true'", "'false'", "'null'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "'.'", 
                     "','", "'='", "'>'", "'>='", "'<'", "'<='", "'!='", 
                     "'=='", "'+'", "'-'", "'*'", "'/'", "'&&'", "'!'", 
                     "'abstract'", "'assert'", "'boolean'", "'break'", "'byte'", 
                     "'case'", "'catch'", "'char'", "'class'", "'const'", 
                     "'continue'", "'default'", "'do'", "'double'", "'else'", 
                     "'enum'", "'extends'", "'final'", "'finally'", "'float'", 
                     "'for'", "'if'", "'goto'", "'implements'", "'import'", 
                     "'instanceof'", "'int'", "'interface'", "'length'", 
                     "'long'", "'main'", "'native'", "'new'", "'package'", 
                     "'private'", "'protected'", "'public'", "'return'", 
                     "'short'", "'static'", "'strictfp'", "'String'", "'super'", 
                     "'switch'", "'synchronized'", "'System.out.println'", 
                     "'this'", "'throw'", "'throws'", "'transient'", "'try'", 
                     "'void'", "'volatile'", "'while'" ]

    symbolicNames = [ "<INVALID>", "INTEIRO", "TRUE", "FALSE", "NULL", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "LKEY", "RKEY", 
                      "SEMI", "DOT", "COMMA", "ATTR", "GT", "GE", "LT", 
                      "LE", "NOTEQ", "EQ", "PLUS", "MINUS", "MULT", "DIV", 
                      "AND", "NOT", "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", 
                      "BYTE", "CASE", "CATCH", "CHAR", "CLASS", "CONST", 
                      "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", 
                      "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", "IF", 
                      "GOTO", "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", 
                      "INTERFACE", "LENGTH", "LONG", "MAIN", "NATIVE", "NEW", 
                      "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", 
                      "SHORT", "STATIC", "STRICTFP", "STRING", "SUPER", 
                      "SWITCH", "SYNCHRONIZED", "SYSTEM_OUT", "THIS", "THROW", 
                      "THROWS", "TRANSIENT", "TRY", "VOID", "VOLATILE", 
                      "WHILE", "ID", "LINE_COMMENT", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDecl = 2
    RULE_var = 3
    RULE_metodo = 4
    RULE_parametros = 5
    RULE_tipo = 6
    RULE_cmd = 7
    RULE_exp = 8
    RULE_exp_aux = 9
    RULE_rexp = 10
    RULE_rexp_aux = 11
    RULE_aexp = 12
    RULE_aexp_aux = 13
    RULE_mexp = 14
    RULE_mexp_aux = 15
    RULE_sexp = 16
    RULE_pexp = 17
    RULE_pexp_aux = 18
    RULE_exps = 19

    ruleNames =  [ "program", "mainClass", "classDecl", "var", "metodo", 
                   "parametros", "tipo", "cmd", "exp", "exp_aux", "rexp", 
                   "rexp_aux", "aexp", "aexp_aux", "mexp", "mexp_aux", "sexp", 
                   "pexp", "pexp_aux", "exps" ]

    EOF = Token.EOF
    INTEIRO=1
    TRUE=2
    FALSE=3
    NULL=4
    LPAREN=5
    RPAREN=6
    LBRACKET=7
    RBRACKET=8
    LKEY=9
    RKEY=10
    SEMI=11
    DOT=12
    COMMA=13
    ATTR=14
    GT=15
    GE=16
    LT=17
    LE=18
    NOTEQ=19
    EQ=20
    PLUS=21
    MINUS=22
    MULT=23
    DIV=24
    AND=25
    NOT=26
    ABSTRACT=27
    ASSERT=28
    BOOLEAN=29
    BREAK=30
    BYTE=31
    CASE=32
    CATCH=33
    CHAR=34
    CLASS=35
    CONST=36
    CONTINUE=37
    DEFAULT=38
    DO=39
    DOUBLE=40
    ELSE=41
    ENUM=42
    EXTENDS=43
    FINAL=44
    FINALLY=45
    FLOAT=46
    FOR=47
    IF=48
    GOTO=49
    IMPLEMENTS=50
    IMPORT=51
    INSTANCEOF=52
    INT=53
    INTERFACE=54
    LENGTH=55
    LONG=56
    MAIN=57
    NATIVE=58
    NEW=59
    PACKAGE=60
    PRIVATE=61
    PROTECTED=62
    PUBLIC=63
    RETURN=64
    SHORT=65
    STATIC=66
    STRICTFP=67
    STRING=68
    SUPER=69
    SWITCH=70
    SYNCHRONIZED=71
    SYSTEM_OUT=72
    THIS=73
    THROW=74
    THROWS=75
    TRANSIENT=76
    TRY=77
    VOID=78
    VOLATILE=79
    WHILE=80
    ID=81
    LINE_COMMENT=82
    COMMENT=83
    WS=84

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassContext,0)


        def EOF(self):
            return self.getToken(MiniJavaParser.EOF, 0)

        def classDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniJavaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.mainClass()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.CLASS:
                self.state = 41
                self.classDecl()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(MiniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MiniJavaParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.ID)
            else:
                return self.getToken(MiniJavaParser.ID, i)

        def LKEY(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.LKEY)
            else:
                return self.getToken(MiniJavaParser.LKEY, i)

        def PUBLIC(self):
            return self.getToken(MiniJavaParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(MiniJavaParser.STATIC, 0)

        def VOID(self):
            return self.getToken(MiniJavaParser.VOID, 0)

        def MAIN(self):
            return self.getToken(MiniJavaParser.MAIN, 0)

        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(MiniJavaParser.STRING, 0)

        def LBRACKET(self):
            return self.getToken(MiniJavaParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(MiniJavaParser.RBRACKET, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)

        def cmd(self):
            return self.getTypedRuleContext(MiniJavaParser.CmdContext,0)


        def RKEY(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.RKEY)
            else:
                return self.getToken(MiniJavaParser.RKEY, i)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)




    def mainClass(self):

        localctx = MiniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(MiniJavaParser.CLASS)
            self.state = 50
            self.match(MiniJavaParser.ID)
            self.state = 51
            self.match(MiniJavaParser.LKEY)
            self.state = 52
            self.match(MiniJavaParser.PUBLIC)
            self.state = 53
            self.match(MiniJavaParser.STATIC)
            self.state = 54
            self.match(MiniJavaParser.VOID)
            self.state = 55
            self.match(MiniJavaParser.MAIN)
            self.state = 56
            self.match(MiniJavaParser.LPAREN)
            self.state = 57
            self.match(MiniJavaParser.STRING)
            self.state = 58
            self.match(MiniJavaParser.LBRACKET)
            self.state = 59
            self.match(MiniJavaParser.RBRACKET)
            self.state = 60
            self.match(MiniJavaParser.ID)
            self.state = 61
            self.match(MiniJavaParser.RPAREN)
            self.state = 62
            self.match(MiniJavaParser.LKEY)
            self.state = 63
            self.cmd()
            self.state = 64
            self.match(MiniJavaParser.RKEY)
            self.state = 65
            self.match(MiniJavaParser.RKEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MiniJavaParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.ID)
            else:
                return self.getToken(MiniJavaParser.ID, i)

        def LKEY(self):
            return self.getToken(MiniJavaParser.LKEY, 0)

        def RKEY(self):
            return self.getToken(MiniJavaParser.RKEY, 0)

        def EXTENDS(self):
            return self.getToken(MiniJavaParser.EXTENDS, 0)

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarContext,i)


        def metodo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MetodoContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MetodoContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)




    def classDecl(self):

        localctx = MiniJavaParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(MiniJavaParser.CLASS)
            self.state = 68
            self.match(MiniJavaParser.ID)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaParser.EXTENDS:
                self.state = 69
                self.match(MiniJavaParser.EXTENDS)
                self.state = 70
                self.match(MiniJavaParser.ID)


            self.state = 73
            self.match(MiniJavaParser.LKEY)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 29)) & ~0x3f) == 0 and ((1 << (_la - 29)) & ((1 << (MiniJavaParser.BOOLEAN - 29)) | (1 << (MiniJavaParser.INT - 29)) | (1 << (MiniJavaParser.ID - 29)))) != 0):
                self.state = 74
                self.var()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.PUBLIC:
                self.state = 80
                self.metodo()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(MiniJavaParser.RKEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiniJavaParser.TipoContext,0)


        def ID(self):
            return self.getToken(MiniJavaParser.ID, 0)

        def SEMI(self):
            return self.getToken(MiniJavaParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = MiniJavaParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.tipo()
            self.state = 89
            self.match(MiniJavaParser.ID)
            self.state = 90
            self.match(MiniJavaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MetodoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(MiniJavaParser.PUBLIC, 0)

        def tipo(self):
            return self.getTypedRuleContext(MiniJavaParser.TipoContext,0)


        def ID(self):
            return self.getToken(MiniJavaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)

        def LKEY(self):
            return self.getToken(MiniJavaParser.LKEY, 0)

        def RETURN(self):
            return self.getToken(MiniJavaParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MiniJavaParser.SEMI, 0)

        def RKEY(self):
            return self.getToken(MiniJavaParser.RKEY, 0)

        def parametros(self):
            return self.getTypedRuleContext(MiniJavaParser.ParametrosContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarContext,i)


        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.CmdContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.CmdContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_metodo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetodo" ):
                listener.enterMetodo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetodo" ):
                listener.exitMetodo(self)




    def metodo(self):

        localctx = MiniJavaParser.MetodoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_metodo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MiniJavaParser.PUBLIC)
            self.state = 93
            self.tipo()
            self.state = 94
            self.match(MiniJavaParser.ID)
            self.state = 95
            self.match(MiniJavaParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 29)) & ~0x3f) == 0 and ((1 << (_la - 29)) & ((1 << (MiniJavaParser.BOOLEAN - 29)) | (1 << (MiniJavaParser.INT - 29)) | (1 << (MiniJavaParser.ID - 29)))) != 0):
                self.state = 96
                self.parametros()


            self.state = 99
            self.match(MiniJavaParser.RPAREN)
            self.state = 100
            self.match(MiniJavaParser.LKEY)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 101
                    self.var() 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.LKEY or _la==MiniJavaParser.IF or ((((_la - 72)) & ~0x3f) == 0 and ((1 << (_la - 72)) & ((1 << (MiniJavaParser.SYSTEM_OUT - 72)) | (1 << (MiniJavaParser.WHILE - 72)) | (1 << (MiniJavaParser.ID - 72)))) != 0):
                self.state = 107
                self.cmd()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(MiniJavaParser.RETURN)
            self.state = 114
            self.exp()
            self.state = 115
            self.match(MiniJavaParser.SEMI)
            self.state = 116
            self.match(MiniJavaParser.RKEY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.TipoContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.ID)
            else:
                return self.getToken(MiniJavaParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.COMMA)
            else:
                return self.getToken(MiniJavaParser.COMMA, i)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = MiniJavaParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.tipo()
            self.state = 119
            self.match(MiniJavaParser.ID)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.COMMA:
                self.state = 120
                self.match(MiniJavaParser.COMMA)
                self.state = 121
                self.tipo()
                self.state = 122
                self.match(MiniJavaParser.ID)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TipoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_tipo

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BoolContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(MiniJavaParser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)


    class IntVetContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiniJavaParser.INT, 0)
        def LBRACKET(self):
            return self.getToken(MiniJavaParser.LBRACKET, 0)
        def RBRACKET(self):
            return self.getToken(MiniJavaParser.RBRACKET, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntVet" ):
                listener.enterIntVet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntVet" ):
                listener.exitIntVet(self)


    class IdContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MiniJavaParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)


    class IntContext(TipoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.TipoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(MiniJavaParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)



    def tipo(self):

        localctx = MiniJavaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tipo)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = MiniJavaParser.IntVetContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(MiniJavaParser.INT)
                self.state = 130
                self.match(MiniJavaParser.LBRACKET)
                self.state = 131
                self.match(MiniJavaParser.RBRACKET)
                pass

            elif la_ == 2:
                localctx = MiniJavaParser.BoolContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(MiniJavaParser.BOOLEAN)
                pass

            elif la_ == 3:
                localctx = MiniJavaParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(MiniJavaParser.INT)
                pass

            elif la_ == 4:
                localctx = MiniJavaParser.IdContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.match(MiniJavaParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_cmd

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(MiniJavaParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)
        def exp(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpContext,0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)
        def cmd(self):
            return self.getTypedRuleContext(MiniJavaParser.CmdContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)


    class PrintStatementContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYSTEM_OUT(self):
            return self.getToken(MiniJavaParser.SYSTEM_OUT, 0)
        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)
        def exp(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpContext,0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)
        def SEMI(self):
            return self.getToken(MiniJavaParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)


    class IfElseStatementContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MiniJavaParser.IF, 0)
        def LPAREN(self):
            return self.getToken(MiniJavaParser.LPAREN, 0)
        def exp(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpContext,0)

        def RPAREN(self):
            return self.getToken(MiniJavaParser.RPAREN, 0)
        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.CmdContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.CmdContext,i)

        def ELSE(self):
            return self.getToken(MiniJavaParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseStatement" ):
                listener.enterIfElseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseStatement" ):
                listener.exitIfElseStatement(self)


    class VariableAssignmentStatementContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)
